--- a/index.html
+++ b/index.html
@@ -1,11 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DevJourney</title>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <!-- CSS Styles -->
+    <link rel="stylesheet" href="style/style.css">
 </head>
-<body>
-    
+
+<body class="azeret-mono-class">
+
+    <header>
+        <div class="header-top">
+            <h3>DevJourney</h3>
+            <button>Download Resume</button>
+        </div>
+
+        <div class="header-bottom">
+            <div class="hero-container">
+                <img src="./assets/Group.png" alt="">
+                <h2>"In the near future, I hope to become a Developer."</h2>
+                <p>I want to build my future as a developer by learning step by step. My goal is to create useful and
+                    meaningful projects with code. With passion and practice, I believe I can turn this dream into
+                    reality. I am always ready to learn new things and improve myself every day. One day, I hope to
+                    contribute my skills to create solutions that help people."</p>
+                <button>Contact with me</button>
+            </div>
+        </div>
+
+    </header>
+
+    <main>
+        <section>
+            <div class="web-development-section">
+
+                <div class="why-web-development-container">
+                    <h3>Why Web Development??</h3>
+                    <p>Web development opens the door to creating dynamic digital experiences that connect people,
+                        businesses, and ideas seamlessly. Mastering it not only empowers you to build innovative
+                        solutions
+                        but also positions you at the forefront of the ever-evolving tech world.</p>
+                </div>
+
+                <div class="content-split">
+
+                    <div class="content-split-left">
+                        <h3>I will Do Coding and Change The World</h3>
+                        <p>I will do coding and change the world by turning ideas into impactful digital solutions that
+                            inspire progress. Every line of code I write is a step toward innovation, creating tools and
+                            experiences that make life smarter and more connected</p>
+                        <button>Learn More</button>
+
+                    </div>
+                    <div class="content-split-right">
+                        <img src="./assets/Layer_1.png" alt="">
+                    </div>
+                </div>
+
+                <div class="content-split">
+                    <div class="content-split-left">
+                        <img src="./assets/Group 3.png" alt="">
+
+
+                    </div>
+                    <div class="content-split-right">
+                        <h3>I will help People by creating Modern Web System</h3>
+                        <p>I will help people by creating modern web systems that simplify everyday tasks and bring
+                            ideas to life online. By combining innovation with practical design, I aim to build digital
+                            experiences that genuinely make a difference.</p>
+                        <button>Learn More</button>
+                    </div>
+                </div>
+
+
+                <div class="content-split">
+                    <div class="content-split-left">
+                        <h3>I will Do Coding and Change The World</h3>
+                        <p>I will do coding and change the world by turning ideas into impactful digital solutions that
+                            inspire progress. Every line of code I write is a step toward innovation, creating tools and
+                            experiences that make life smarter and more connected</p>
+                        <button>Learn More</button>
+                    </div>
+                    <div class="content-split-right">
+                        <img src="./assets/Group 4.png" alt="">
+                    </div>
+                </div>
+
+
+
+            </div>
+        </section>
+
+        <section>
+            <div class="inspiration-container">
+                <h3>My Inspiration</h3>
+                <p>My inspiration comes from the vision of creating meaningful solutions that leave a positive mark on
+                    the world. It drives me to learn, innovate, and turn challenges into opportunities for growth and
+                    impact.</p>
+                <div class="inspiration-video">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/i7lcH0GBWg8?si=pAkrcc7XQDnEGAyk"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+
+            </div>
+
+        </section>
+
+
+    </main>
+
+
+
+
+
+
+    <footer>
+
+    </footer>
+
+
 </body>
+
 </html>
