--- a/index.html
+++ b/index.html
@@ -115,6 +115,78 @@
         </section>
 
 
+        <section>
+            <div class="my-current-target-container">
+                <div class="my-current-target-title">
+                    <h3>My Current Target</h3>
+                    <p>My current target is to master HTML, CSS, and JavaScript to build interactive and visually
+                        appealing web experiences. By strengthening these core skills, I aim to turn creative ideas into
+                        functional, modern websites.</p>
+                </div>
+                <div class="box-container">
+
+                    <div class="card" id="html">
+                        <div class="card-container">
+                            <div class="card-image">
+                                <img src="./assets/html.png" alt="">
+                            </div>
+                            <div class="card-title">
+                                <h3>HTML</h3>
+                                <P>HTML is the foundation of the web, allowing me to structure content and bring ideas
+                                    to life online.</P>
+                                <a href="">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card" id="css">
+                        <div class="card-container">
+                            <div class="card-image">
+                                <img src="./assets/css.png" alt="">
+                            </div>
+                            <div class="card-title">
+                                <h3>CSS</h3>
+                                <P>CSS styles the web by adding design, colors, and layouts that make a page visually attractive and user-friendly.</P>
+                                <a href="">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card" id="javascript">
+                        <div class="card-container">
+                            <div class="card-image">
+                                <img src="./assets/js.png" alt="">
+                            </div>
+                            <div class="card-title">
+                                <h3>JavaScript</h3>
+                                <P>JavaScript makes web pages interactive, adding dynamic features that bring websites to life.</P>
+                                <a href="">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+
+
+            </div>
+        </section>
+
+        <section>
+            <div class="support-form">
+                <div class="support-container">
+                    <h3>I need support</h3>
+                    <p>I need support to stay motivated and move forward toward achieving my goals.</p>
+                    <form >
+                        <input type="text" placeholder="Suggest me any feedback for me">
+                        
+                        <input class="btn" type="button" value="Submit">
+                    </form>
+                </div>
+            </div>
+        </section>
+
+
     </main>
 
 
