--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
                     meaningful projects with code. With passion and practice, I believe I can turn this dream into
                     reality. I am always ready to learn new things and improve myself every day. One day, I hope to
                     contribute my skills to create solutions that help people."</p>
-                <button>Contact with me</button>
+                <a href="#contact">
+                    <button>Contact with me</button>
+                </a>
+
             </div>
         </div>
 
@@ -91,9 +94,6 @@
                         <img src="./assets/Group 4.png" alt="">
                     </div>
                 </div>
-
-
-
             </div>
         </section>
 
@@ -109,11 +109,8 @@
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
-
             </div>
-
         </section>
-
 
         <section>
             <div class="my-current-target-container">
@@ -146,7 +143,8 @@
                             </div>
                             <div class="card-title">
                                 <h3>CSS</h3>
-                                <P>CSS styles the web by adding design, colors, and layouts that make a page visually attractive and user-friendly.</P>
+                                <P>CSS styles the web by adding design, colors, and layouts that make a page visually
+                                    attractive and user-friendly.</P>
                                 <a href="">Learn More</a>
                             </div>
                         </div>
@@ -159,16 +157,13 @@
                             </div>
                             <div class="card-title">
                                 <h3>JavaScript</h3>
-                                <P>JavaScript makes web pages interactive, adding dynamic features that bring websites to life.</P>
+                                <P>JavaScript makes web pages interactive, adding dynamic features that bring websites
+                                    to life.</P>
                                 <a href="">Learn More</a>
                             </div>
                         </div>
                     </div>
-
-
                 </div>
-
-
             </div>
         </section>
 
@@ -177,27 +172,35 @@
                 <div class="support-container">
                     <h3>I need support</h3>
                     <p>I need support to stay motivated and move forward toward achieving my goals.</p>
-                    <form >
+                    <form>
                         <input type="text" placeholder="Suggest me any feedback for me">
-                        
+
                         <input class="btn" type="button" value="Submit">
                     </form>
                 </div>
             </div>
         </section>
-
-
     </main>
 
 
-
-
-
-
-    <footer>
-
+    <footer id="contact">
+        <div class="footer-container">
+            <div class="footer-title-left">
+                <p>An open commitment by Md Nazmul Hossain Emon</p>
+            </div>
+            <div class="footer-icons-right">
+                <a href="https://www.facebook.com/md.nazmul.hossain.emon.2025/" target="_blank">
+                    <img src="./assets/facebook.png" alt="">
+                </a>
+                <a href="https://github.com/nazmulhossainemon11" target="_blank">
+                    <img src="./assets/github.png" alt="">
+                </a>
+                <a href="https://www.linkedin.com/in/nazmul-hossain-emon11/" target="_blank">
+                    <img src="./assets/linkedin-icon 1.png" alt="">
+                </a>
+            </div>
+        </div>
     </footer>
-
 
 </body>
 
