--- a/index.html
+++ b/index.html
@@ -167,17 +167,14 @@
             </div>
         </section>
 
-        <section>
-            <div class="support-form">
-                <div class="support-container">
-                    <h3>I need support</h3>
-                    <p>I need support to stay motivated and move forward toward achieving my goals.</p>
-                    <form>
-                        <input type="text" placeholder="Suggest me any feedback for me">
-
-                        <input class="btn" type="button" value="Submit">
-                    </form>
-                </div>
+        <section class="support-form">
+            <div class="support-container">
+                <h3>I need support</h3>
+                <p>I need support to stay motivated and move forward toward achieving my goals.</p>
+                <form>
+                    <input type="text" placeholder="Suggest me any feedback for me">
+                    <input class="btn" type="button" value="Submit">
+                </form>
             </div>
         </section>
     </main>
