--- a/index.html
+++ b/index.html
@@ -17,150 +17,171 @@
 <body class="azeret-mono-class">
 
     <header>
-        <div class="header-top">
-            <h3>DevJourney</h3>
-            <button>Download Resume</button>
+        <!-- Top Navigation -->
+        <div class="nav-bar">
+            <h3 class="brand">DevJourney</h3>
+            <button class="resume-btn">Download Resume</button>
         </div>
 
-        <div class="header-bottom">
-            <div class="hero-container">
-                <img src="./assets/Group.png" alt="">
+        <!-- Hero Section -->
+        <div class="hero">
+            <div class="hero-content">
+                <img src="./assets/Group.png" alt="Hero Illustration" class="hero-img">
                 <h2>"In the near future, I hope to become a Developer."</h2>
-                <p>I want to build my future as a developer by learning step by step. My goal is to create useful and
-                    meaningful projects with code. With passion and practice, I believe I can turn this dream into
-                    reality. I am always ready to learn new things and improve myself every day. One day, I hope to
-                    contribute my skills to create solutions that help people."</p>
+                <p>
+                    I want to build my future as a developer by learning step by step. My goal is to create useful and
+                    meaningful
+                    projects with code. With passion and practice, I believe I can turn this dream into reality. I am
+                    always
+                    ready to learn new things and improve myself every day. One day, I hope to contribute my skills to
+                    create
+                    solutions that help people.
+                </p>
                 <a href="#contact">
-                    <button>Contact with me</button>
+                    <button class="contact-btn">Contact Me</button>
                 </a>
-
             </div>
         </div>
-
     </header>
 
+
+
+
+
     <main>
-        <section>
-            <div class="web-development-section">
 
-                <div class="why-web-development-container">
-                    <h3>Why Web Development??</h3>
-                    <p>Web development opens the door to creating dynamic digital experiences that connect people,
-                        businesses, and ideas seamlessly. Mastering it not only empowers you to build innovative
-                        solutions
-                        but also positions you at the forefront of the ever-evolving tech world.</p>
+        <section class="web-section">
+            <!-- Intro -->
+            <div class="intro-box">
+                <h3>Why Web Development?</h3>
+                <p>
+                    Web development opens the door to creating dynamic digital experiences that connect people,
+                    businesses, and ideas seamlessly. Mastering it empowers you to build innovative solutions
+                    and positions you at the forefront of the ever-evolving tech world.
+                </p>
+            </div>
+
+            <!-- Block 1 -->
+            <div class="split-box">
+                <div class="split-text">
+                    <h3>I Will Do Coding and Change The World</h3>
+                    <p>
+                        I will do coding and change the world by turning ideas into impactful digital solutions
+                        that inspire progress. Every line of code I write is a step toward innovation, creating
+                        tools and experiences that make life smarter and more connected.
+                    </p>
+                    <button class="learn-btn">Learn More</button>
+                </div>
+                <div class="split-image">
+                    <img src="./assets/Layer_1.png" alt="Coding Illustration">
+                </div>
+            </div>
+
+            <!-- Block 2 -->
+            <div class="split-box reverse">
+                <div class="split-text">
+                    <h3>I Will Help People by Creating Modern Web Systems</h3>
+                    <p>
+                        I will help people by creating modern web systems that simplify everyday tasks and bring
+                        ideas to life online. By combining innovation with practical design, I aim to build digital
+                        experiences that genuinely make a difference.
+                    </p>
+                    <button class="learn-btn">Learn More</button>
                 </div>
 
-                <div class="content-split">
-
-                    <div class="content-split-left">
-                        <h3>I will Do Coding and Change The World</h3>
-                        <p>I will do coding and change the world by turning ideas into impactful digital solutions that
-                            inspire progress. Every line of code I write is a step toward innovation, creating tools and
-                            experiences that make life smarter and more connected</p>
-                        <button>Learn More</button>
-
-                    </div>
-                    <div class="content-split-right">
-                        <img src="./assets/Layer_1.png" alt="">
-                    </div>
+                <div class="split-image">
+                    <img src="./assets/Group 3.png" alt="Helping People">
                 </div>
 
-                <div class="content-split">
-                    <div class="content-split-left">
-                        <img src="./assets/Group 3.png" alt="">
+            </div>
 
-
-                    </div>
-                    <div class="content-split-right">
-                        <h3>I will help People by creating Modern Web System</h3>
-                        <p>I will help people by creating modern web systems that simplify everyday tasks and bring
-                            ideas to life online. By combining innovation with practical design, I aim to build digital
-                            experiences that genuinely make a difference.</p>
-                        <button>Learn More</button>
-                    </div>
+            <!-- Block 3 -->
+            <div class="split-box">
+                <div class="split-text">
+                    <h3>I Will Do Coding and Change The World</h3>
+                    <p>
+                        I will do coding and change the world by turning ideas into impactful digital solutions
+                        that inspire progress. Every line of code I write is a step toward innovation, creating
+                        tools and experiences that make life smarter and more connected.
+                    </p>
+                    <button class="learn-btn">Learn More</button>
                 </div>
-
-
-                <div class="content-split">
-                    <div class="content-split-left">
-                        <h3>I will Do Coding and Change The World</h3>
-                        <p>I will do coding and change the world by turning ideas into impactful digital solutions that
-                            inspire progress. Every line of code I write is a step toward innovation, creating tools and
-                            experiences that make life smarter and more connected</p>
-                        <button>Learn More</button>
-                    </div>
-                    <div class="content-split-right">
-                        <img src="./assets/Group 4.png" alt="">
-                    </div>
+                <div class="split-image">
+                    <img src="./assets/Group 4.png" alt="World Change">
                 </div>
             </div>
         </section>
 
-        <section>
-            <div class="inspiration-container">
+        <!-- Inspiration Section -->
+        <section class="inspiration-section">
+            <div class="inspiration-box">
                 <h3>My Inspiration</h3>
-                <p>My inspiration comes from the vision of creating meaningful solutions that leave a positive mark on
+                <p>
+                    My inspiration comes from the vision of creating meaningful solutions that leave a positive mark on
                     the world. It drives me to learn, innovate, and turn challenges into opportunities for growth and
-                    impact.</p>
-                <div class="inspiration-video">
+                    impact.
+                </p>
+                <div class="video-box">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/i7lcH0GBWg8?si=pAkrcc7XQDnEGAyk"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                    </iframe>
                 </div>
             </div>
         </section>
 
-        <section>
-            <div class="my-current-target-container">
-                <div class="my-current-target-title">
+
+        <section class="goals-section">
+            <div class="goals-container">
+                <div class="goals-header">
                     <h3>My Current Target</h3>
-                    <p>My current target is to master HTML, CSS, and JavaScript to build interactive and visually
-                        appealing web experiences. By strengthening these core skills, I aim to turn creative ideas into
-                        functional, modern websites.</p>
+                    <p>
+                        My current target is to master HTML, CSS, and JavaScript to build interactive and visually
+                        appealing
+                        web experiences. By strengthening these core skills, I aim to turn creative ideas into
+                        functional,
+                        modern websites.
+                    </p>
                 </div>
-                <div class="box-container">
 
-                    <div class="card" id="html">
-                        <div class="card-container">
-                            <div class="card-image">
-                                <img src="./assets/html.png" alt="">
-                            </div>
-                            <div class="card-title">
-                                <h3>HTML</h3>
-                                <P>HTML is the foundation of the web, allowing me to structure content and bring ideas
-                                    to life online.</P>
-                                <a href="">Learn More</a>
-                            </div>
+                <div class="skills-grid">
+                    <!-- HTML Card -->
+                    <div class="skill-card html-skill">
+                        <div class="skill-icon">
+                            <img src="./assets/html.png" alt="HTML Logo">
+                        </div>
+                        <div class="skill-info">
+                            <h3>HTML</h3>
+                            <p>HTML is the foundation of the web, allowing me to structure content and bring ideas to
+                                life online.</p>
+                            <a href="#">Learn More</a>
                         </div>
                     </div>
 
-                    <div class="card" id="css">
-                        <div class="card-container">
-                            <div class="card-image">
-                                <img src="./assets/css.png" alt="">
-                            </div>
-                            <div class="card-title">
-                                <h3>CSS</h3>
-                                <P>CSS styles the web by adding design, colors, and layouts that make a page visually
-                                    attractive and user-friendly.</P>
-                                <a href="">Learn More</a>
-                            </div>
+                    <!-- CSS Card -->
+                    <div class="skill-card css-skill">
+                        <div class="skill-icon">
+                            <img src="./assets/css.png" alt="CSS Logo">
+                        </div>
+                        <div class="skill-info">
+                            <h3>CSS</h3>
+                            <p>CSS styles the web by adding design, colors, and layouts that make a page visually
+                                attractive and user-friendly.</p>
+                            <a href="#">Learn More</a>
                         </div>
                     </div>
 
-                    <div class="card" id="javascript">
-                        <div class="card-container">
-                            <div class="card-image">
-                                <img src="./assets/js.png" alt="">
-                            </div>
-                            <div class="card-title">
-                                <h3>JavaScript</h3>
-                                <P>JavaScript makes web pages interactive, adding dynamic features that bring websites
-                                    to life.</P>
-                                <a href="">Learn More</a>
-                            </div>
+                    <!-- JavaScript Card -->
+                    <div class="skill-card js-skill">
+                        <div class="skill-icon">
+                            <img src="./assets/js.png" alt="JavaScript Logo">
+                        </div>
+                        <div class="skill-info">
+                            <h3>JavaScript</h3>
+                            <p>JavaScript makes web pages interactive, adding dynamic features that bring websites to
+                                life.</p>
+                            <a href="#">Learn More</a>
                         </div>
                     </div>
                 </div>
